...
        <scene sceneID="lKu-ih-rmN">
            <objects>
                <viewController storyboardIdentifier="LoginView" id="xIz-iG-RVU" userLabel="Login" customClass="LoginViewController" customModule="Rivergreenway" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="HJe-k5-APS"/>
...
                                                    <rect key="frame" x="8" y="7" width="35" height="35"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Record Activity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nUN-4w-jCR">
                                                    <rect key="frame" x="51" y="14" width="116" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <rect key="frame" x="8" y="7" width="35" height="35"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Activity History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jY7-DS-1wx">
                                                    <rect key="frame" x="51" y="14" width="116" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <rect key="frame" x="8" y="7" width="35" height="35"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Achievements" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NAy-Az-LxL">
                                                    <rect key="frame" x="51" y="14" width="108" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <rect key="frame" x="8" y="7" width="35" height="35"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Trail Map" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gIo-l0-Zue">
                                                    <rect key="frame" x="51" y="14" width="71" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <rect key="frame" x="8" y="7" width="35" height="35"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Account Statistics" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dwd-3y-QXl">
                                                    <rect key="frame" x="51" y="14" width="139" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <rect key="frame" x="8" y="7" width="35" height="35"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Account Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tI-hs-86D">
                                                    <rect key="frame" x="51" y="14" width="120" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    <rect key="frame" x="8" y="7" width="35" height="35"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09T-cr-AuY">
                                                    <rect key="frame" x="51" y="14" width="47" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
